Fixed image overflow on small screens, added grids.

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,8 @@ body{
 #root{
   min-height: 100%;
 }
+
+.centeredContainer {
+  display: flex;
+  justify-content: center;
+}
